[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/common/confirmation-dialog.gd" id="1"]

[node name="ConfirmationDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
focus_mode = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
focus_mode = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogPanel" type="Panel" parent="Overlay/CenterContainer"]
custom_minimum_size = Vector2(450, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Overlay/CenterContainer/DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/CenterContainer/DialogPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MessageLabel" type="Label" parent="Overlay/CenterContainer/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Do you want to save your changes?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer" type="Control" parent="Overlay/CenterContainer/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="Overlay/CenterContainer/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SaveButton" type="Button" parent="Overlay/CenterContainer/DialogPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Save"

[node name="DontSaveButton" type="Button" parent="Overlay/CenterContainer/DialogPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Don't Save"

[node name="CancelButton" type="Button" parent="Overlay/CenterContainer/DialogPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Cancel"
